# nordify-gui

./: Cargo.toml
src/: browser.rs  main.rs  menu.rs  preview.rs  theme.rs
