[package]
name = "nordifygui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
fastrand = "1.8.0"
nordify = { path = "../nordify" }
whatsinaname = { path = "../whatsinaname" }
tempfile = "3.3.0"
iced = { version = "0.5.2", features = ["image", "svg"] }
